Adjust credit in template

--- a/templates/station.html
+++ b/templates/station.html
@@ -42,7 +42,7 @@
     </div>
     
     <div id="credit">
-        ZettaView - Created by <a href="https://mediarealm.com.au/">Anthony Eden</a>
+        ZettaView - Created by <a href="https://mediarealm.com.au/">Anthony Eden / Media Realm</a>
     </div>
 
     <script type="text/javascript">
